# graphics-sandbox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dependencies.cmake  README.md
assets/models/backpack/: scene.gltf
assets/shaders/: deferred_composite.hlsl  deferred_gbuf_mesh.hlsl  fwd_mesh.hlsl
src/: main.cpp
src/Core/: App.cpp  App.hpp  Logging.hpp  Window.cpp  Window.hpp
src/Rendering/: Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Submesh.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
